--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,47 @@
-/*empty*/
+/*this is how to comment*/
+
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Island+Moments&family=Mukta:wght@200&display=swap');
+
+body {
+    font-family: 'Island Moments', cursive;
+    font-family: 'Mukta', sans-serif;
+}
+
+.welcomingText{
+    font-family: Helvetica;
+    color: white;
+}
+
+.welcomeArea{
+    background-color:black;
+}
+
+button:hover{
+    background-color:#002ead;
+    outline-style: solid;
+    box-shadow: 0 0 0 10px #5a01a7;
+    transition: 0.7s;
+}
+
+.genderButtons{
+    margin-top: 20px;
+}
+
+.burgerMenu{
+    margin-left: 300px;
+}
+
+.separateArea{
+    border: 2px solid orange;
+    border-radius: 25px;
+    margin: 10px;
+    padding-left: 40px;
+
+}
+
+#customerDiv{
+    background-color: white;
+    color: black    ;
+}
+
