--- a/public/style.css
+++ b/public/style.css
@@ -18,10 +18,10 @@ body {
 }
 
 button:hover{
-    background-color:#002ead;
-    outline-style: solid;
-    box-shadow: 0 0 0 10px #5a01a7;
-    transition: 0.7s;
+    background-color:springgreen;
+    outline-style: auto;
+    box-shadow: 0 0 0 2px #5a01a7;
+    transition: 0.2s;
 }
 
 .genderButtons{
@@ -34,14 +34,28 @@ button:hover{
 
 .separateArea{
     border: 2px solid orange;
-    border-radius: 25px;
     margin: 10px;
     padding-left: 40px;
 
 }
+
 
 #customerDiv{
     background-color: white;
     color: black    ;
 }
 
+#wholediv{
+}
+
+
+#longImage{
+    width: 100%;
+    opacity: 80%;
+    height: 300px;
+}
+
+#longImagediv{
+    padding-left: 10px;
+    padding-right: 10px;
+}
